--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "format": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "storybook": "storybook dev -p 3003",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
@@ -29,19 +31,37 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@storybook/addon-a11y": "7.0.0-beta.62",
+    "@storybook/addon-actions": "7.0.0-beta.62",
+    "@storybook/addon-essentials": "^7.0.0-beta.62",
+    "@storybook/addon-interactions": "^7.0.0-beta.62",
+    "@storybook/addon-links": "^7.0.0-beta.62",
+    "@storybook/addons": "^6.5.16",
+    "@storybook/blocks": "^7.0.0-beta.62",
+    "@storybook/client-api": "^6.5.16",
+    "@storybook/nextjs": "^7.0.0-beta.62",
+    "@storybook/preview-web": "^6.5.16",
+    "@storybook/react": "7.0.0-beta.62",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/testing-react": "^1.3.0",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-testing-library": "^5.10.2",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "jest-fail-on-console": "^3.0.2",
-    "json-server": "^0.17.2"
+    "json-server": "^0.17.2",
+    "storybook": "^7.0.0-beta.62",
+    "webpack": "^5.75.0"
   },
   "engines": {
     "node": "^18.12.0",
