--- a/package.json
+++ b/package.json
@@ -60,12 +60,18 @@
     "jest-environment-jsdom": "^29.4.3",
     "jest-fail-on-console": "^3.0.2",
     "json-server": "^0.17.2",
+    "msw": "^1.1.0",
+    "msw-storybook-addon": "^1.7.0",
     "storybook": "^7.0.0-beta.62",
+    "swr": "^2.1.0",
     "webpack": "^5.75.0"
   },
   "engines": {
     "node": "^18.12.0",
     "pnpm": "^7.17.0"
   },
-  "packageManager": "pnpm@7.17.0"
+  "packageManager": "pnpm@7.17.0",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
