--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
+    "@radix-ui/react-switch": "^1.0.1",
     "@storybook/addon-a11y": "7.0.0-beta.62",
     "@storybook/addon-actions": "7.0.0-beta.62",
     "@storybook/addon-essentials": "^7.0.0-beta.62",
@@ -62,6 +63,7 @@
     "json-server": "^0.17.2",
     "msw": "^1.1.0",
     "msw-storybook-addon": "^1.7.0",
+    "next-themes": "^0.2.1",
     "storybook": "^7.0.0-beta.62",
     "swr": "^2.1.0",
     "webpack": "^5.75.0"
