--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "storybook dev -p 3003",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "server": "json-server server.json -p 3333"
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
