--- a/package.json
+++ b/package.json
@@ -17,58 +17,57 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.9",
+    "@types/react-dom": "18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "next": "13.2.3",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@radix-ui/react-switch": "^1.0.1",
-    "@storybook/addon-a11y": "7.0.0-beta.62",
-    "@storybook/addon-actions": "7.0.0-beta.62",
-    "@storybook/addon-essentials": "^7.0.0-beta.62",
-    "@storybook/addon-interactions": "^7.0.0-beta.62",
-    "@storybook/addon-links": "^7.0.0-beta.62",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/blocks": "^7.0.0-beta.62",
-    "@storybook/client-api": "^6.5.16",
-    "@storybook/nextjs": "^7.0.0-beta.62",
-    "@storybook/preview-web": "^6.5.16",
-    "@storybook/react": "7.0.0-beta.62",
-    "@storybook/testing-library": "^0.0.14-next.1",
-    "@storybook/testing-react": "^1.3.0",
-    "@testing-library/dom": "^9.0.0",
+    "@babel/core": "^7.22.5",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@storybook/addon-a11y": "^7.0.20",
+    "@storybook/addon-actions": "^7.0.20",
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-interactions": "^7.0.20",
+    "@storybook/addon-links": "^7.0.20",
+    "@storybook/addons": "^7.0.20",
+    "@storybook/blocks": "^7.0.20",
+    "@storybook/client-api": "^7.0.20",
+    "@storybook/nextjs": "^7.0.20",
+    "@storybook/preview-web": "^7.0.20",
+    "@storybook/react": "^7.0.20",
+    "@storybook/testing-library": "^0.1.0",
+    "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.0",
-    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/jest": "^29.5.2",
+    "@types/testing-library__jest-dom": "^5.14.6",
     "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-storybook": "^0.6.11",
-    "eslint-plugin-testing-library": "^5.10.2",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
-    "jest-fail-on-console": "^3.0.2",
-    "json-server": "^0.17.2",
-    "msw": "^1.1.0",
-    "msw-storybook-addon": "^1.7.0",
+    "eslint-plugin-jest-dom": "^5.0.1",
+    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-fail-on-console": "^3.1.1",
+    "json-server": "^0.17.3",
+    "msw": "^1.2.1",
+    "msw-storybook-addon": "^1.8.0",
     "next-themes": "^0.2.1",
-    "storybook": "^7.0.0-beta.62",
-    "swr": "^2.1.0",
-    "webpack": "^5.75.0"
+    "storybook": "^7.0.20",
+    "swr": "^2.1.5",
+    "webpack": "^5.86.0"
   },
   "engines": {
     "node": "^18.12.0",
